20/11/2012 OsiGlpk, OsiCpx
  - workaround problem in Glpk with empty problem name (patch by Bertrand Le Cun)
  - not using CPXsolninfo for MIPs with CPLEX < 11.0 anymore

25/07/2012 OsiGrb
  - fix mipstart option in OsiGrb: pass only values for discrete variables to Gurobi

26/11/2011 OsiGrb
  - add implementation of OsiGrb::applyCuts that batches the row cuts before transfering them to Gurobi

12/11/2011 OsiSpx
  - add resolve with cleared basis if solve fails with exception (which may be due to a singular startbasis),
    needs SoPlex >= 1.5.0.7

03/09/2011 OsiMsk
  - fix bug in one loadProblem method when NULL was passed as row range array

30/07/2011 Osi
  - fix writing LP files with names: the objective name was not copied, leading to a segfault in CoinLpIO

30/07/2011 OsiSpx, OsiGlpk
  - allow NULLs for row* arguments in some loadProblem call

28/07/2011 OsiSpx
  - invert dual ray in getDualRays to match Osi definition when testing infeasibility proof

12/07/2011 MSVisualStudio
  - updated MSVC++ v10 project files to catch up with buildsystem changes

25/06/2011 Osi
  - add generic implementations of is{Primal,Dual}ObjectiveLimitReached

25/06/2011 OsiCommonTest
  - add unittest command line parameter -onerror to specify behaviour in case of a failing test 

23/06/2011 OsiMsk
  - add isLicenseError() to check whether last solve was abandoned due to a mosek licensing issue 

22/06/2011 OsiCpx
  - fix handling of primal/dual objective limit so it correctly takes objoffset into account
  - preserve objective sense also when empty model is loaded
  - make sure getWarmStart returns proper atlower/atupper status for inequalities

13/06/2011 OsiCommonTest, unittest
  - removed now redundant counting of unittest failures, so test functions now return void 

03/06/2011 OsiMsk
  - fix caching flags (bitwise negation is ~, not !)
  - free all cached data when loading problem
  - fix getDualRay and getPrimalRay so they should return a ray now 